# IMAC2028_S2_TD3_Algo_tri

./: .gitignore  CMakeLists.txt  README.md
src/: exo1.cpp  exo2.cpp  exo3.cpp  exo4.cpp  td_1_exo4.cpp  td_3_exo2.cpp  td_5_bonus.cpp  td_5_exo1.cpp  td_5_exo2.cpp  td_5_exo3.cpp
src/td6/: main.cpp  node.cpp  node.hpp
